[gd_scene load_steps=3 format=3 uid="uid://6fcg3s3lipa0"]

[ext_resource type="Script" path="res://Menu.gd" id="1_0s1tj"]
[ext_resource type="Theme" uid="uid://b5ydh8ikvlvhy" path="res://buttonTheme.tres" id="2_0tglq"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 480.0
offset_bottom = 268.0
script = ExtResource("1_0s1tj")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.5
offset_top = -25.0
offset_right = 24.5
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_0tglq")
text = "Play"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_0tglq")
text = "Quit"

[node name="PressButton" type="AudioStreamPlayer2D" parent="."]

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
